--- a/index.html
+++ b/index.html
@@ -18,21 +18,33 @@
   </style>
 </head>
 <body>
-<div class="conteiner-1">
+<main class="conteiner-1">
+  <figure>
   <img id="img" src="images/illustration-hero.svg" alt="figura humana escutando música">
- <h1  id="titulo-1"> Order Summary</h1>
- <h3 id="paragrafo"> You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device <br> anywhere you like!</h3>
+  </figure>
+  <header>
+ <h1  class="titulo-1"> Order Summary</h1>
+  </header>
+  <aside>
+ <h2 class="paragrafo"> You can now listen to millions of songs, audiobooks, and podcasts on any 
+  device <br> anywhere you like!</h2>
+  </aside>
   <div id="conteiner-2">
+    <figure>
   <img id="imag-2" src="images/icon-music.svg" alt="">
+    </figure>
+    <section>
  <b id="anual">AnnualPlan</b>
 <h3>$59.99/year </h3>
- <button type="button" id="change">Change</button></div>
+ <a href="#" id="change">Change</a></div>
  <button type="button" id="pagamento">Proceed to Payment</button>
- <button type="button" id="cancelamento">Cancel Order </button>
-    <h6 class="attribution">
+ <a href="#"id="cancelamento">Cancel Order </a>
+  </section>
+</main>
+  <footer>
+    <h5 class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Marcos2511</a>.</h6>
-</div>
+    Coded by <a href="#">Marcos2511</a>.</h5>
+  </footer>
 </body>
 </html>
